Shrink search window (not null necessarily, but do shrink it)
Better thread utilization: keep all threads busy through end of minimax compute
	(including last move).
Remove MAX_NUM_CPUS limitation.
More search time if first move's eval goes down.  Finish the level. ... at
     least try to find a move that doesn't go down.  Especially if first move
     evals to -checkmate.


Version 10:
Implemented depth-1 futility pruning.
Fix capture-king bug (enpassant codepath could reset dc to FLAG)
Made pawn moves symmetrical (prefer kingside capture).
Cleanup: Split ref.h up; module re-org; use builtin abs(); proper MoveT
Improved Makefile.
Pick system-dependent intelligent default for hash memory size.
SwitcherContextT rework.
Bugfix: fix corrupted hash (bestComstr must be array, or could be switched out
	from under us!)
Bugfix: make buildSanString() work properly when src rank+file are different.
Implement undo+redo (including move takeback)
Bugfix: edit-position (bump MLIST_MAX_MOVES, fix adjacent king detection)
Bugfix: xboard: make any applicable move before claiming a claimed draw.
Move ordering: check hashed positions first (~20% improvement)
Fix occasional thinker recv()/send() asserts.
Prefer king castling moves.
Made number of cpu threads runtime-configurable.
Bugfix: fix crash when forcing move before decent move has been found.
Bugfix: uiNcurses: fix display of clocks when they go negative.
Implement preferred variation (PV), use it for move preference.
Bugfix: fix repeatPly calc (should improve hashing)
Improved endgame (KQ vs KN, KQ vs KB)
uiXboard: -- implemented 'ping', 'setboard'.
	  -- improved PV output (nodes, timeTaken)
Implement pondering.
Bugfix: take captures into account in endgame eval when we only have king.
Minor changes for x86-64 + gcc 4.3.2.
Fix capture-king bug (discovered check via enpassant when we are in check ourselves)
Implement (optional) per-move timelimit for all interfaces.