@@ -14,13 +14,13 @@ xboard -size bulky -debug -thinking -xponder -mode TwoMachines -fcp ./arctic -sc
 xboard -size bulky -ncp
 
 # play arctic against older version
-xboard -size bulky -debug -debugFile ~/xboard.debug -thinking -xponder -mode TwoMachines -scp ./arctic -fcp ../arctic9/arctic
+xboard -size bulky -debug -debugFile ~/xboard.debug -thinking -xponder -mode TwoMachines -scp ./arctic -fcp ../../arcticExe/arctic10
 
-# play human on ICS
+# play human on FICS
 xboard -size bulky -ics -icshost freechess.org # no timeseal
 xboard -size bulky -ics -icshost 69.36.243.188 -icshelper timeseal.Linux
 
-# play computer on ICS
+# play computer on FICS
 xboard -size bulky -debug -debugFile ~/xboard.debug -thinking -zp -ics -icshost 69.36.243.188 -icshelper timeseal.Linux -fcp ./arctic -zippyGameStart 'say Hi, I am a homebrew computer program.  My operator/author is mandolin.  Please have fun!'
 set highlight 0
 set examine 0
@@ -32,4 +32,4 @@ set autoflag 1
 xboard -size bulky -debug -debugFile ~/xboard.debug -thinking -ponder -mode TwoMachines -fcp "polyglot -noini -log true -lf /home/blandry/polyglot.log -ec fruit" -scp "polyglot -noini -log true -lf /home/blandry/polyglot.log2 -ec stockfish"
 
 # Play arctic (UCI) against older version
-xboard -size bulky -debug -debugFile ~/xboard.debug -thinking -ponder -mode TwoMachines -fcp ../arctic9/arctic -scp "polyglot -noini -log true -lf /home/blandry/polyglot.log3 -ec ./arctic"
+xboard -size bulky -debug -debugFile ~/xboard.debug -thinking -xponder -mode TwoMachines -fcp ../../arcticExe/arctic10 -scp "polyglot -noini -log true -lf /home/blandry/polyglot.log3 -ec ./arctic"
